force-app/main/default/objects/EndCustomer__c/EndCustomer__c.object-meta.xml
<CustomObject>
    <label>최종고객</label>
    <nameField>
        <label>Customer No</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>