force-app/main/default/objects/EndCustomer__c/fields/BirthDate__c.field-meta.xml
<CustomField>
    <fullName>BirthDate__c</fullName>
    <label>Birth Date</label>
    <type>Date</type>
</CustomField>