force-app/main/default/objects/EndCustomer__c/fields/BusinessNo__c.field-meta.xml
<CustomField>
    <fullName>BusinessNo__c</fullName>
    <label>Business No</label>
    <length>10</length>
    <type>Text</type>
</CustomField>