force-app/main/default/objects/EndCustomer__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dealer</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>End Customer</relationshipLabel>
    <relationshipName>End_Customer</relationshipName>
    <type>Lookup</type>
</CustomField>