force-app/main/default/objects/EndCustomer__c/fields/Customer_Type__c.field-meta.xml
<CustomField>
    <fullName>Customer_Type__c</fullName>
    <label>Customer Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Corporation</fullName>
                <label>법인사업자</label>
            </value>
            <value>
                <fullName>BusinessOperator</fullName>
                <label>개인사업자</label>
            </value>
            <value>
                <fullName>individual</fullName>
                <label>개인</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>