force-app/main/default/objects/EndCustomer__c/fields/CustomerRating__c.field-meta.xml
<CustomField>
    <fullName>CustomerRating__c</fullName>
    <label>Customer Rating</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>VVIP</fullName>
            </value>
            <value>
                <fullName>VIP</fullName>
            </value>
            <value>
                <fullName>GOLD</fullName>
            </value>
            <value>
                <fullName>SILVER</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>