force-app/main/default/objects/EndCustomer__c/fields/CustomerStatusType__c.field-meta.xml
<CustomField>
    <fullName>CustomerStatusType__c</fullName>
    <label>Customer Status Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>