force-app/main/default/objects/EndCustomer__c/fields/FirstName__c.field-meta.xml
<CustomField>
    <fullName>FirstName__c</fullName>
    <label>First  Name</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>