force-app/main/default/objects/EndCustomer__c/fields/Gender__c.field-meta.xml
<CustomField>
    <fullName>Gender__c</fullName>
    <label>Gender</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Male</fullName>
                <label>남자</label>
            </value>
            <value>
                <fullName>Female</fullName>
                <label>여자</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>