force-app/main/default/objects/EndCustomer__c/fields/HasOptedOutSolicit__c.field-meta.xml
<CustomField>
    <fullName>HasOptedOutSolicit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Don&apos;t Market</label>
    <type>Checkbox</type>
</CustomField>