force-app/main/default/objects/EndCustomer__c/fields/ResidentRegistrationNo__c.field-meta.xml
<CustomField>
    <fullName>ResidentRegistrationNo__c</fullName>
    <label>Resident Registration No</label>
    <length>7</length>
    <type>Text</type>
</CustomField>